User Permission Controller added
