# app/Http/Controllers/AuthController.php
@@ -50,7 +50,7 @@ class AuthController extends Controller
             'name' => 'required|string|max:255',
             'email' => 'required|string|email|max:255|unique:users',
             'password' => 'required|string|min:6',
-            'role' => 'required|string|in:accountant,doctor,nurse,pathologist,radiologist,receptionist',
+            'role' => 'required|string|in:accountant,doctor,nurse,pathologist,radiologist,receptionist,admin',
         ]);
 
         $hospitalId = "H".time();
